--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,4 @@
+# config/routes.yaml
 #index:
-#    path: /
-#    controller: App\Controller\DefaultController::index
+#  path: /hello/{name}
+#  controller: 'App\Controller\DefaultController::index'
